plugins {
	id 'org.springframework.boot' version '3.3.12'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'java'
}



group = 'com.softure'
version = '2.0.3'
sourceCompatibility = '17'

bootJar {
    mainClass = 'com.Sw42WebApplication'
}

repositories {
	mavenCentral()
	maven { 
		url = uri("https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/")
		allowInsecureProtocol = true
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	implementation 'net.sf.jasperreports:jasperreports:6.21.3'
	implementation 'net.sf.jasperreports:jasperreports-chart-themes:6.21.3'
	implementation 'net.sf.jasperreports:jasperreports-fonts:6.21.3'
	
	implementation 'net.sf.barcode4j:barcode4j:2.1'
	implementation ('org.apache.xmlgraphics:batik-bridge:1.17')
	{
        exclude group: 'xml-apis', module: 'xml-apis'
    }
	implementation 'com.google.zxing:core:3.4.1'
	implementation 'commons-net:commons-net:3.9.0'
	
	implementation 'org.apache.commons:commons-fileupload2:2.0.0-M2'
	
	implementation 'org.apache.commons:commons-lang3:3.13.0'
	implementation 'org.apache.commons:commons-csv:1.10.0'
	implementation 'org.apache.poi:poi:5.2.3'
	
	
	implementation 'com.drewnoakes:metadata-extractor:2.18.0'
	implementation 'org.freemarker:freemarker:2.3.32'
	
	implementation 'org.postgresql:postgresql'
	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.8.1.jre11'
	
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'com.googlecode.xades4j:xades4j:2.3.0'
	
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
	implementation 'com.sun.activation:jakarta.activation:2.0.1'
	
}

test {
	useJUnitPlatform()
}
